# proyek-klasifikasi-gambar

./: .gitignore  notebook copy.ipynb  notebook.ipynb  notebook_salah.ipynb  pyproject.toml  requirements.txt
