[project]
name = "proyek-klasifikasi-gambar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.11",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "split-folders>=0.5.1",
    "tensorflow>=2.19.0",
    "tensorflowjs>=4.22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
